# c_tris

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  main.c
assets/: background_01.aseprite  tiles_01.aseprite
src/: defs.h  log.h  main.c  math.h  particles.c  particles.h  render.c  render.h  sound.c  sound.h  vec2.h
